--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "gh-pages": "^4.0.0",
     "jsdoc": "^3.6.11"
+  },
+  "dependencies": {
+    "axios": "^0.27.2"
   }
 }
